// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Snapshots ClassName 1`] = `
<span
  className="sc-AxjAm gOOnnA className"
>
  hei
</span>
`;

exports[`Tag Snapshots No props 1`] = `
<span
  className="sc-AxjAm gOOnnA"
>
  This is a tag
</span>
`;

exports[`Tag Snapshots no Children 1`] = `
<span
  className="sc-AxjAm gOOnnA"
/>
`;
